Fixed odd alignment of page contents when a dialog is displayed.

--- a/src/svelte-components/src/theme/_smui-theme.scss
+++ b/src/svelte-components/src/theme/_smui-theme.scss
@@ -18,6 +18,10 @@
 :root {
     --mdc-theme-text-primary-on-background: #777;
 
+    .mdc-dialog-scroll-lock {
+        margin-right: 15px;
+    }
+
     .mdc-dialog .mdc-dialog__container {
         transition: margin-bottom 0.5s;
     }
